--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "date-fns": "^2.26.0",
+    "howler": "^2.2.3",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0"
